# lokf

./: .gitignore  AI_COVENANT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SPEC.md  justfile  lokf.context.jsonld  lokf.owl.ttl  lokf.schema.json  lokf.shacl.ttl  lokf.sql  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: CNAME  examples.md  getting-started.md  graph.md  index.md  specification.md
docs/guide/: concepts.md  markdown-to-rdf.md  relationships.md  types.md  validation.md
docs/hooks/: lokf_hooks.py
docs/reference/: api.md  artifacts.md
docs/toolkit/: agents.md  convert.md  index.md  mcp.md  proposer.md  query.md  serve.md  tutorial.md
examples/: acme-knowledge.nt  weekly-active-users.nt
examples/acme-knowledge/: index.md  log.md
examples/acme-knowledge/datasets/: events.md
examples/acme-knowledge/glossary/: active-user.md
examples/acme-knowledge/metrics/: weekly-active-users.md
examples/acme-knowledge/playbooks/: data-freshness-incident.md
examples/acme-knowledge/services/: analytics-api.md
examples/acme-knowledge/tables/: user-events.md
scripts/: build.py
src/lokf/: __init__.py  agentskills.py  build.py  cli.py  datamodel.py  export.py  mcp_server.py  model.py  parse.py  propose.py  rdf.py  registry.py  scaffold.py  schema.py  server.py  store.py  tables.py
src/lokf/data/: lokf.context.jsonld  lokf.yaml
src/lokf/skills/author-concept/: SKILL.md
src/lokf/skills/build-knowledge-base/: SKILL.md
src/lokf/skills/enrich-relations/: SKILL.md
src/lokf/skills/publish-graph/: SKILL.md
src/lokf/skills/query-knowledge-base/: SKILL.md
src/lokf/skills/scaffold-knowledge-base/: SKILL.md
src/lokf/templates/kb/: README.md  _gitignore  astro.config.mjs  justfile  package.json  remark-lokf-links.mjs  remark-strip-leading-title.mjs
src/lokf/templates/kb/_github/workflows/: pages.yml
src/lokf/templates/kb/knowledge/: index.md
src/lokf/templates/kb/knowledge/glossary/: active-user.md
src/lokf/templates/kb/knowledge/metrics/: weekly-active-users.md
src/lokf/templates/kb/src/: content.config.ts
src/lokf/templates/kb/src/layouts/: Base.astro
src/lokf/templates/kb/src/lib/: lokf.ts
src/lokf/templates/kb/src/pages/: [...slug].astro  graph.astro  graph.json.ts  graph.jsonld.ts  index.astro
src/lokf/templates/kb/src/styles/: global.css
tests/: test_cli.py  test_export.py  test_hooks.py  test_mcp.py  test_model.py  test_propose.py  test_rdf.py  test_registry.py  test_review_fixes.py  test_scaffold.py  test_schema.py  test_security.py  test_server.py  test_skills.py  test_store.py  test_tables.py  test_vendored.py
web/: .gitignore  astro.config.mjs  package-lock.json  package.json
web/scripts/: gen_api_docs.py  sync-content.mjs
web/src/components/: Head.astro  KnowledgeGraph.astro
web/src/content/docs/: contributing.md  examples.mdx  getting-started.mdx  graph.mdx  index.mdx
web/src/content/docs/guide/: concepts.md  concepts.mdx  markdown-to-rdf.mdx  relationships.mdx  types.mdx  validation.mdx
web/src/content/docs/reference/: artifacts.mdx
web/src/content/docs/toolkit/: agents.mdx  convert.md  index.mdx  mcp.md  proposer.md  query.mdx  scaffold.md  serve.md  tables.md  tutorial.mdx
web/src/styles/: theme.css
