[project]
name = "lokf"
version = "0.1.0"
description = "Linked Open Knowledge Format (LOKF) — a semantic profile of Google's Open Knowledge Format, defined once in LinkML"
readme = "README.md"
license = { text = "CC-BY-4.0" }
authors = [{ name = "Nolan Nichols" }]
requires-python = ">=3.11"
keywords = ["linkml", "json-ld", "rdf", "knowledge-graph", "okf", "dcat", "prov", "sparql", "mcp"]
# Core toolkit: the `lokf` CLI, RDF conversion, the pyoxigraph store + SPARQL,
# the local server, and the MCP server. Deliberately excludes linkml (heavy;
# only the artifact regenerator needs it — see the `build` extra).
dependencies = [
    "rdflib>=7.0",
    "pyyaml>=6.0",
    "ruamel-yaml>=0.18",
    "typer>=0.15",
    "pyoxigraph>=0.4",
    "mcp>=1.2",
]

[project.optional-dependencies]
# Regenerating the LinkML-derived artifacts (`lokf-build`). Not needed to run
# the toolkit, which reads the committed schema/context directly.
build = [
    "linkml>=1.8.5",
]

[project.urls]
Documentation = "https://www.nolan-nichols.com/lokf/"
Repository = "https://github.com/nicholsn/lokf"
Issues = "https://github.com/nicholsn/lokf/issues"

[project.scripts]
lokf = "lokf.cli:app"
lokf-build = "lokf.build:main"
lokf-mcp = "lokf.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "lokf[build]",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
