[project]
name = "lokf"
version = "0.1.0"
description = "Linked Open Knowledge Format (LOKF) — a semantic profile of Google's Open Knowledge Format, defined once in LinkML"
readme = "README.md"
license = "CC-BY-4.0"
license-files = ["LICENSE"]
authors = [{ name = "Nolan Nichols" }]
requires-python = ">=3.11"
keywords = ["linkml", "json-ld", "rdf", "knowledge-graph", "okf", "dcat", "prov", "sparql", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Markup",
]
# Core toolkit: the `lokf` CLI, RDF conversion, the pyoxigraph store + SPARQL,
# the local server, and the MCP server. Deliberately excludes linkml (heavy;
# only the artifact regenerator needs it — see the `build` extra).
dependencies = [
    "rdflib>=7.0",
    "pyyaml>=6.0",
    "ruamel-yaml>=0.18",
    "typer>=0.15",
    "pyoxigraph>=0.4",
    "mcp>=1.2",
    # Runtime for the generated dataclass bindings (src/lokf/datamodel.py).
    # linkml_runtime is light; the heavy `linkml` generator stays in the
    # `build` extra used only to regenerate artifacts.
    "linkml-runtime>=1.8",
]

[project.optional-dependencies]
# Regenerating the LinkML-derived artifacts (`lokf-build`). Not needed to run
# the toolkit, which reads the committed schema/context directly.
build = [
    "linkml>=1.8.5",
]
# Project a bundle to tables/DataFrames (`lokf tables`, lokf.tables). Optional:
# only needed for the tabular writers, not for RDF/graph use.
tables = [
    "pandas>=2.0",
    "pyarrow>=15",
]

[project.urls]
Documentation = "https://lokf.nolan-nichols.com/"
Repository = "https://github.com/nicholsn/lokf"
Issues = "https://github.com/nicholsn/lokf/issues"

[project.scripts]
lokf = "lokf.cli:app"
lokf-build = "lokf.build:main"
lokf-mcp = "lokf.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "lokf[build]",
    "lokf[tables]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
